force-app/main/default/objects/Shop__c.object
<CustomObject>
    <fields>
        <fullName>CIty__c</fullName>
        <label>CIty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CC</fullName>
                </value>
                <value>
                    <fullName>DD</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closing_time__c</fullName>
        <label>Closing time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shop_feedback__c</fullName>
        <label>Shop feedback</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Very poor</fullName>
                </value>
                <value>
                    <fullName>poor</fullName>
                </value>
                <value>
                    <fullName>ok</fullName>
                </value>
                <value>
                    <fullName>good</fullName>
                </value>
                <value>
                    <fullName>Very good</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opening_time__c</fullName>
        <label>opening time</label>
        <type>Time</type>
    </fields>
    <label>Shop</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Shop Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shops</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>